add GET /metrics/{metricId} to swagger.yml
